--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         </ul> 
       </div> 
     </div> 
-    <script src="script.js"></script> 
+    <script src=""></script> 
   </body> 
 </html>
