--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
-    <div class="menu"> 
+    <center><div class="menu"></center>
       <button class="collapsible">Menu</button> 
       <div class="content"> 
         <ul> 
