--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
-    <center><div class="menu"></center>
+    <div align="left">
+      <div class="menu">
       <button class="collapsible">Menu</button> 
       <div class="content"> 
         <ul> 
@@ -15,6 +16,7 @@
           <li><a href="page2.html">Page 2</a></li> 
           <li><a href="page3.html">Page 3</a></li> 
         </ul> 
+      </div>
       </div> 
     </div> 
     <script src="script.js"></script> 
