--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
+    <div class="sidebar" id="sidebar">
     <div align="left">
       <div class="menu">
       <button class="collapsible">Menu</button> 
@@ -18,6 +19,7 @@
         </ul> 
       </div>
       </div> 
+    </div>
     </div> 
     <script src="script.js"></script> 
   </body> 
