--- a/page3.html
+++ b/page3.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html> 
+<html lang="en"> 
+  <head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Cool Collapsable Menu</title> 
+    <link rel="stylesheet" href="style.css"> 
+  </head> 
+  <body> 
+    <div class="sidebar" id="sidebar">
+    <div align="left">
+      <div class="menu">
+      <button class="collapsible">Menu</button> 
+      <div class="content"> 
+        <ul> 
+          <li><a href="index.html">Home</a></li> 
+          <li><a href="page2.html">Page 2</a></li> 
+          <li><a href="page3.html">Page 3</a></li> 
+        </ul> 
+      </div>
+      </div> 
+    </div>
+    </div> 
+    <script src="script.js"></script> 
+  </body> 
+</html>
