--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 50%; height: 50%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGU3e9INdg/bqBINsQIgUOhP4FGiNFcsg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    src="https://www.canva.com/design/DAGU3e9INdg/bqBINsQIgUOhP4FGiNFcsg/view?embed">
   </iframe>
 </div>
     <body> 
