--- a/page3.html
+++ b/page3.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Cool Collapsable Menu</title> 
     <link rel="stylesheet" href="style.css"> 
-    <img src="https://www.canva.com/design/DAGU3e9INdg/bqBINsQIgUOhP4FGiNFcsg/view?embed" alt="Italian Trulli">
-  </iframe>
+<a href="https://ibb.co/bQGWyKZ"><img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The-Best-Website-in-the-World" border="0"></a>  </iframe>
 </div>
     <body> 
     <div class="sidebar" id="sidebar">
