--- a/page3.html
+++ b/page3.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Cool Collapsable Menu</title> 
     <link rel="stylesheet" href="style.css"> 
-<a href="https://ibb.co/bQGWyKZ"><img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The-Best-Website-in-the-World" border="0" style="width:500px;height:600px;"></a> 
+<a href="https://ibb.co/bQGWyKZ"><img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The-Best-Website-in-the-World" border="0" style="width:1000px;height:400px;" object-position: right top;
+></a> 
 </div>
     <body> 
     <div class="sidebar" id="sidebar">
