--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       </div> 
     </div>
     </div> 
+    I was a girl in the village doing alright
+Then I became a princess overnight
+Now I gotta figure out how to do it right
+So much to learn and see
+Up in the castle with my new family
+In a school that's just for royalty
     <script src="script.js"></script> 
   </body> 
 </html>
