--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
           <li><a href="page2.html">Page 2</a></li> 
           <li><a href="page3.html">Page 3</a></li> 
         </ul> 
-I was a girl in the village doing alright
-Then I became a princess overnight
-Now I gotta figure out how to do it right
-So much to learn and see
-Up in the castle with my new family
-In a school that's just for royalty
+<link src="https://soundcloud.com/sofia-the-firt/sofia-the-first-theme-song?in=user10861369/sets/y&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
       </div>
       </div> 
     </div>
