--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="index.html">Home</a></li> 
           <li><a href="page2.html">Page 2</a></li> 
           <li><a href="page3.html">Page 3</a></li> 
-          <li><audio>
+          <li><audio controls>
             <source src="https://www.televisiontunes.com/uploads/audio/Sofia%20the%20First%20-%20Theme.mp3"/>
           </audio></li>
         </ul> 
