--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <li><a href="page3.html">Page 3</a></li> 
           <li><audio controls>
             <source src="https://www.televisiontunes.com/uploads/audio/Sofia%20the%20First%20-%20Theme.mp3"/>
+            	<embed 
+            loop="false"
+		        autostart="false">
           </audio></li>
         </ul> 
       </div>
