--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="page2.html">Page 2</a></li> 
           <li><a href="page3.html">Page 3</a></li> 
           <li><audio controls>
-            <source src="/sofia.mp3"/>
+            <source src="sofia.mp3"/>
 		  <embed 
 			loop="true"
 			autostart="true">
