--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       </div> 
     </div>
     </div> 
+	  <div class="main-content">
+      <h1>yes</h1>
+      <p> yes </p>
+    </div>
     <script src="script.js"></script> 
   </body> 
 </html>
