--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       </div> 
     </div>
     </div> 
-	  <img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The-Best-Website-in-the-World" border="0" class="center"
+	  <div class="banner">
+		  <img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The Best Website in the World" class="center"> 
+	  </div>
 	  <div class="main-content">
       <h1>yes</h1>
       <p> yes </p>
