--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div class="content"> 
         <ul> 
           <li><a href="index.html">Home</a></li> 
-          <li><a href="page2.html">Page 2</a></li> 
-          <li><a href="page3.html">Page 3</a></li> 
+          <li><a href="page2.html">Info</a></li> 
+          <li><a href="page3.html">Impact</a></li> 
           <li><audio controls>
             <source src="sofia.mp3"/>
 		  <embed 
