--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Cool Collapsable Menu</title> 
     <link rel="stylesheet" href="style.css"> 
-    <img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The-Best-Website-in-the-World" border="0" class="center"
   </head> 
   <body> 
     <div class="sidebar" id="sidebar">
@@ -22,6 +21,31 @@
       </div> 
     </div>
     </div> 
+    <div class="banner">
+		  <img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The Best Website in the World" class="center"> 
+	  </div>
+	  <div class="main-content">
+       <h1>Environmental Impact of Computer Usage</h1>
+        <h4>Made by MING</h4>
+      
+        <h2>What are the negative effects of computer device disposal?</h2>
+        <p>
+            In manufacturing, desktop components use a lot of water, and extraction of raw materials as well ass end-of-life disposal have impact on the environment. 
+        </p>
+
+        <p>
+            <strong>Also,</strong> E-waste, and the environmental impact of disposing of computer goes to involve harmful substances, and breakdown waste of valuable resources that could've been recycled or reused
+
+        </p>
+
+        <h2>How can we minimize the impact of computer device production on the environment?</h2>
+        <p>Using a screen for 8 years results in greenhouse gas emissions equivalent to 70g CO<sub>2</sub>e from energy consumption.</p>
+
+        <p>
+          Big data centers and computers have been transitioning to cleaner energy sources like solar energy. Also, AI is reducing emissions, by solving and coming up with solutions to the emissions and identify the inefficiencies in solar power systems.</p>
+
+        <p>The average desktop consumes 40W of electricity, which contributes to CO<sub>2</sub> emissions.By producing less, the problems lessen and also by recycling from past computers you can reduce the waste needed.</p>
+    </div>
     <script src="script.js"></script> 
   </body> 
 </html>
