--- a/page3.html
+++ b/page3.html
@@ -23,6 +23,31 @@
       </div> 
     </div>
     </div> 
+          <div class="banner">
+		  <img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The Best Website in the World" class="center"> 
+	  </div>
+	  <div class="main-content">
+       <h1>Environmental Impact of Computer Usage</h1>
+        <h4>Made by MING</h4>
+      
+        <h2>What are some ways to reduce the environmental impact of computer use?</h2>
+        <p>
+           By turning off computers and powering off when you aren't using electronics, you can save electricity and lower your green house gas emissions. Furthermore, by buying less it could reduce production, and lower the use of electricity
+        </p>
+
+        <p>
+            <strong>Cited:</strong> “Environmental IMPACT OF IT: Desktops, Laptops and Screens.” IT Services, 13 Apr. 2022, www.it.ox.ac.uk/article/environment-and-it. 
+
+        </p>
+
+        <h2>How can we minimize the impact of computer device disposal on the environment?</h2>
+        <p>Reuse, reduce, recycle. The main way to reduce environmental impact is to buy less. By using a single screen, you could reduce the waste produced. Also, by increasing the sustainability and durability of a computer/electronic, you can get more years out of it with less cost and less waste. An important aspect of sustainability is to ensure 'spare' equipment is returned and reused earliest possible.</p>
+
+        <p>
+          Big data centers and computers have been transitioning to cleaner energy sources like solar energy. Also, AI is reducing emissions, by solving and coming up with solutions to the emissions and identify the inefficiencies in solar power systems.</p>
+
+        <p>“Environmental IMPACT OF IT: Desktops, Laptops and Screens.” IT Services, 13 Apr. 2022, www.it.ox.ac.uk/article/environment-and-it. </p>
+    </div>
     <script src="script.js"></script> 
   </body> 
 </html>
