--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     </div> 
 	  <div class="banner">
-		  <img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The Best Website in the World" class="center"> 
+		  <img src="industries.png" class="center"> 
 	  </div>
 	  <div class="main-content">
        <h1>Environmental Impact of Computer Usage</h1>
