--- a/page3.html
+++ b/page3.html
@@ -3,9 +3,8 @@
   <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Cool Collapsable Menu</title> 
+    <title>Computers!!!!</title> 
     <link rel="stylesheet" href="style.css"> 
-<img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The-Best-Website-in-the-World" border="0" class="center"
 ></a> 
 </div>
     <body> 
