--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
     </div>
     </div> 
     <div class="banner">
-		  <img src="https://i.ibb.co/wB20bzX/The-Best-Website-in-the-World.png" alt="The Best Website in the World" class="center"> 
+		  <img src="https://media.discordapp.net/attachments/1129460085622579374/1303523931185217556/Industries.png?ex=672c10c3&is=672abf43&hm=836d83a1ec199973f9b2fc85c0c23b58e60b1cb376c0dfd0adaa516edf413e68" class="center"> 
 	  </div>
 	  <div class="main-content">
        <h1>Environmental Impact of Computer Usage</h1>
