--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
+	  <div id="preloader"></div>
     <div class="sidebar" id="sidebar">
     <div align="left">
       <div class="menu">
