--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
+	      <div class="loadingScreen">
+
     <div class="sidebar" id="sidebar">
     <div align="left">
       <div class="menu">
