--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
-	      <div class="loadingScreen">
+     <div class="loadingScreen">
+	     <script src="https://unpkg.com/@lottiefiles/lottie-player@2.0.8/dist/lottie-player.js"></script>
+<lottie-player src="https://lottie.host/591a4cb9-3e8b-4a6a-b7db-1cf096239969/OZTZYqJTrD.json" background="##F2F2F2" speed="1" style="width: 300px; height: 300px" loop controls autoplay direction="1" mode="normal"></lottie-player>
+    </div>
 
     <div class="sidebar" id="sidebar">
     <div align="left">
