--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	  <!--mingtests-->
 		  <div class="page-loader">
   <div class="spinner"></div>
-  <div class="txt">Cargando<br>vacaciones</div>
+  <div class="txt">bere<br>here</div>
 </div>
 	  <!--mingtests-->
     <div class="sidebar" id="sidebar">
