--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	  <!--mingtests-->
 		  <div class="page-loader">
   <div class="spinner"></div>
+			  <img src="https://media1.tenor.com/m/FawYo00tBekAAAAC/loading-thinking.gif">
   <div class="txt">wait<br>a moment</div>
 </div> 
 	  <!--mingtests-->
