--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     </div> 
 	  <div class="banner">
-		  <img src="https://media.discordapp.net/attachments/1129460085622579374/1303523931185217556/Industries.png?ex=672c10c3&is=672abf43&hm=836d83a1ec199973f9b2fc85c0c23b58e60b1cb376c0dfd0adaa516edf413e68" class="center"> 
+		  <img src="https://i.ibb.co/1mSHDKB/Industries.jpg" class="center"> 
 	  </div>
 	  <div class="main-content">
        <h1>Environmental Impact of Computer Usage</h1>
