--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
-	  <!--mingtests-->
+	  <!--mingtests !!!code from tutorial!!!-->
   <div class="page-loader">
   <div class="spinner"></div>
   <div class="txt">wait<br>a moment</div>
 </div> 
-	  <!--mingtests-->
+	  <!--mingtests !!!code from tutorial!!!-->
     <div class="sidebar" id="sidebar">
     <div align="left">
       <div class="menu">
