--- a/page3.html
+++ b/page3.html
@@ -47,6 +47,20 @@
 
         <p>“Environmental IMPACT OF IT: Desktops, Laptops and Screens.” IT Services, 13 Apr. 2022, www.it.ox.ac.uk/article/environment-and-it. </p>
     </div>
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+  </tr>
+  <tr>
+    <td>linkidin</td>
+    <td>indeed</td></td>
+  </tr>
+  <tr>
+    <td><a href="https://ca.linkedin.com/jobs/environmental-project-manager-jobs-toronto-on?position=1&pageNum=0">here</a></td>
+    <td><a href="https://ca.indeed.com/q-environmental-project-manager-l-ontario-jobs.html">here</a></td>
+  </tr>
+</table>
     <script src="script.js"></script> 
   </body> 
 </html>
