--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     </div> 
 	  <div class="banner">
-		  <img src="https://i.ibb.co/1mSHDKB/Industries.jpg" class="center"> 
+		  <img src="Locko &.png" class="center"> 
 	  </div>
 	  <div class="main-content">
        <h1>Environmental Impact of Computer Usage</h1>
