--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
   <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Computers!!!!</title> 
+    <title>Locko</title> 
     <link rel="stylesheet" href="style.css"> 
   </head> 
   <body> 
@@ -18,37 +18,68 @@
       <div class="content"> 
         <ul> 
           <li><a href="index.html">Home</a></li> 
-          <li><a href="page2.html">Page 2</a></li> 
-          <li><a href="page3.html">Page 3</a></li> 
+          <li><a href="page2.html">Locko</a></li> 
+          <li><a href="page3.html">Auto Blinds</a></li> 
         </ul> 
       </div>
       </div> 
     </div>
     </div> 
     <div class="banner">
-		  <img src="https://i.ibb.co/1mSHDKB/Industries.jpg" class="center"> 
+		  <img src="Locko &.png" class="center"> 
 	  </div>
 	  <div class="main-content">
-       <h1>Environmental Impact of Computer Usage</h1>
-        <h4>Made by MING</h4>
+       <h1>Automatic Door Locking System</h1>
+        <h4>Designed and Developed by Ming</h4>
+
+		  <p>Tired of carrying your keys everywhere you go, and worried if your door is locked or not?
+Do you always have that bugging feeling for you might've forgotten to lock your door?
+introducing: My automated door locking system. This system makes locking doors hassle-free, and focuses on making your home safer. All this system requires is a micro:bit and servo motor to automatically lock and unlock the door depending on the light level.</p>
       
-        <h2>What are the negative effects of computer device disposal?</h2>
+        <h2>See it in action!</h2>
+		        <video controls width="600" poster="action.jpg">
+            <source src="Action.mp4" type="video/mp4">
+	<h2>How it works:</h2>
+
         <p>
-            In manufacturing, desktop components use a lot of water, and extraction of raw materials as well ass end-of-life disposal have impact on the environment. 
+            The system I'm using uses a light sensors on the microbit to determine if it's daytime, or if a strong lightforce is detected.
+        </p>
+	<ul>
+            <li><strong>Daytime:</strong> The door automatically unlocks.</li>
+            <li><strong>Nighttime:</strong> The door automatically locks.</li>
+            <li><strong>Flashlight Override:</strong> Shine a flashlight on the sensor to unlock the door at night.</li>
+        </ul>
+       <div class="image-section">
+            <h2>Tinkercad View</h2>
+            <img src="TinkerCad.jpg" alt="Hardware Setup" class="center" width="600">
+        </div>
+
+        <h2>Who Can Use This?</h2>
+        <p>
+            This system is designed for everyone in the household. It’s especially useful for individuals who frequently go in and out of the house, ensuring convenience and peace of mind.
         </p>
 
-        <p>
-            <strong>Also,</strong> E-waste, and the environmental impact of disposing of computer goes to involve harmful substances, and breakdown waste of valuable resources that could've been recycled or reused
+        <h2>Key Features</h2>
+        <ul>
+            <li>Automatically locks and unlocks the door based on light levels.</li>
+            <li>Easy to use for all household members.</li>
+            <li>Improves safety by ensuring doors are locked at night.</li>
+            <li>Hassle-free operation, eliminating the need for physical keys.</li>
+        </ul>
+				
+        <div class="video-section">
+            <h2>360 view</h2>
+            <video controls width="600" poster="360view.jpg">
+                <source src="360view.mp4" type="video/mp4">
+            </video>
+        </div>
 
+        <h2>Why Choose This System?</h2>
+        <p>
+            This automated door lock system provides a seamless solution to enhance home safety and convenience. By removing the need to remember to lock your door, it ensures a safer living environment while being incredibly user-friendly.
         </p>
+    </div>
 
-        <h2>How can we minimize the impact of computer device production on the environment?</h2>
-        <p>Using a screen for 8 years results in greenhouse gas emissions equivalent to 70g CO<sub>2</sub>e from energy consumption.</p>
-
-        <p>
-           Big data centers and computers have been transitioning to cleaner energy sources like solar energy. Also, AI is reducing emissions, by solving and coming up with solutions to the emissions and identify the inefficiencies in solar power systems.</p>
-
-        <p>The average desktop consumes 40W of electricity, which contributes to CO<sub>2</sub> emissions.By producing less, the problems lessen and also by recycling from past computers you can reduce the waste needed.</p>
     </div>
     <script src="script.js"></script> 
   </body> 
