--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,7 @@ introducing: My automated door locking system. This system makes locking doors h
       
         <h2>See it in action!</h2>
 		        <video controls width="600" poster="action.jpg">
-            <source src="Action.mp4" type="video/mp4">
+            <source src="Action.mov" type="video/mov">
 				
 	<h2>How it works:</h2>
 
