--- a/page2.html
+++ b/page2.html
@@ -37,8 +37,8 @@ Do you always have that bugging feeling for you might've forgotten to lock your 
 introducing: My automated door locking system. This system makes locking doors hassle-free, and focuses on making your home safer. All this system requires is a micro:bit and servo motor to automatically lock and unlock the door depending on the light level.</p>
       
         <h2>See it in action!</h2>
-		        <video controls width="600" poster="action.jpg">
-            <source src="Action.mov" type="video/mov">
+		        <video controls width="600" poster="Locko &.png">
+            <source src="Action.mp4" type="video/.mp4">
 				
 	<h2>How it works:</h2>
 
