--- a/page2.html
+++ b/page2.html
@@ -39,6 +39,7 @@ introducing: My automated door locking system. This system makes locking doors h
         <h2>See it in action!</h2>
 		        <video controls width="600" poster="Locko &.png">
             <source src="Action.mp4" type="video/mp4">
+			</video>
 				
 	<h2>How it works:</h2>
 
