--- a/page2.html
+++ b/page2.html
@@ -51,10 +51,10 @@ introducing: My automated door locking system. This system makes locking doors h
             <li><strong>Nighttime:</strong> The door automatically locks.</li>
             <li><strong>Flashlight Override:</strong> Shine a flashlight on the sensor to unlock the door at night.</li>
         </ul>
-       <div class="image-section">
-            <h2>Tinkercad View</h2>
-            <img src="Tinkercad.jpg" alt="Hardware Setup" class="center" width="600">
-        </div>
+		  <div class="image-section">
+			  <h2>Tinkercad View</h2>
+			  <img src="Tinkercad.jpg" alt="Hardware Setup" class="center" width="300" height="200">
+		  </div>
 
         <h2>Who Can Use This?</h2>
         <p>
