--- a/page2.html
+++ b/page2.html
@@ -53,7 +53,7 @@ introducing: My automated door locking system. This system makes locking doors h
         </ul>
 		  <div class="image-section">
 			  <h2>Tinkercad View</h2>
-			  <img src="Tinkercad.jpg" alt="Hardware Setup" class="center" width="300" height="200">
+			  <img src="Tinkercad.jpg" alt="Hardware Setup" class="center" width="150" height="100">
 		  </div>
 
         <h2>Who Can Use This?</h2>
@@ -68,14 +68,18 @@ introducing: My automated door locking system. This system makes locking doors h
             <li>Improves safety by ensuring doors are locked at night.</li>
             <li>Hassle-free operation, eliminating the need for physical keys.</li>
         </ul>
-				
-        <div class="video-section">
-            <h2>360 view</h2>
-            <video controls width="600" poster="360view.jpg">
-                <source src="360view.mp4" type="video/mp4">
-            </video>
-        </div>
-
+		  <!--Carasel attempt-->
+		  <div class="carousel-section">
+			  <h2>360 View</h2>
+			  <div class="carousel">
+				  <div class="slides">
+					  <img src="v.jpg" alt="v">
+					  <img src="vv.jpg" alt="vv">
+					  <img src="vvv.jpg" alt="vvv">
+				  </div>
+			  </div>
+		  </div>
+		  <!--Carasel attempt-->
         <h2>Why Choose This System?</h2>
         <p>
             This automated door lock system provides a seamless solution to enhance home safety and convenience. By removing the need to remember to lock your door, it ensures a safer living environment while being incredibly user-friendly.
