--- a/page2.html
+++ b/page2.html
@@ -53,7 +53,7 @@ introducing: My automated door locking system. This system makes locking doors h
         </ul>
 		  <div class="image-section">
 			  <h2>Tinkercad View</h2>
-			  <img src="Tinkercad.jpg" alt="Hardware Setup" class="center" width="150" height="100">
+			  <img src="Tinkercad.jpg" alt="Hardware Setup" style="display: block; margin: 0 auto; height: 100px; width: auto;">
 		  </div>
 
         <h2>Who Can Use This?</h2>
