--- a/page2.html
+++ b/page2.html
@@ -53,7 +53,7 @@ introducing: My automated door locking system. This system makes locking doors h
         </ul>
 		  <div class="image-section">
 			  <h2>Tinkercad View</h2>
-			  <img src="Tinkercad.jpg" alt="Hardware Setup" style="display: block; margin: 0 auto; height: 750px; width: auto;">
+			  <img src="Tinkercad.jpg" alt="Hardware Setup" style="display: block; margin: 0 auto; height: 500px; width: auto;">
 		  </div>
 
         <h2>Who Can Use This?</h2>
@@ -71,11 +71,11 @@ introducing: My automated door locking system. This system makes locking doors h
 		  <!--Carasel attempt-->
 		  <div class="carousel-section">
 			  <h2>360 View</h2>
-			  <div class="carousel">
-				  <div class="slides">
-					  <img src="v.jpg" alt="v">
-					  <img src="vv.jpg" alt="vv">
-					  <img src="vvv.jpg" alt="vvv">
+			  <div class="carousel" style="width: 600px; overflow: hidden; margin: 0 auto; position: relative;">
+				  <div class="slides" style="display: flex; transition: transform 0.5s ease-in-out;">
+					  <img src="v.jpg" alt="v" style="max-height: 250px; width: auto;">
+					  <img src="vv.jpg" alt="vv" style="max-height: 250px; width: auto;">
+					  <img src="vvv.jpg" alt="vvv" style="max-height: 250px; width: auto;">
 				  </div>
 			  </div>
 		  </div>
