--- a/page2.html
+++ b/page2.html
@@ -35,11 +35,11 @@
 		  <p>Tired of carrying your keys everywhere you go, and worried if your door is locked or not?
 Do you always have that bugging feeling for you might've forgotten to lock your door?
 introducing: My automated door locking system. This system makes locking doors hassle-free, and focuses on making your home safer. All this system requires is a micro:bit and servo motor to automatically lock and unlock the door depending on the light level.</p>
-      
-        <h2>See it in action!</h2>
-		        <video controls width="600" poster="Locko &.png">
-            <source src="Action.mp4" type="video/mp4">
-			</video>
+
+		  <h2>See it in action!</h2>
+		  <video controls style="width: 100%; height: auto;" poster="Locko &.png">
+			  <source src="Action.mp4" type="video/mp4">
+		  </video>
 				
 	<h2>How it works:</h2>
 
