--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="content"> 
         <ul> 
           <li><a href="index.html">Home</a></li> 
-          <li><a href="page2.html">Info</a></li> 
-          <li><a href="page3.html">Impact</a></li> 
+          <li><a href="page2.html">Locko</a></li> 
+          <li><a href="page3.html">Auto Blinds</a></li> 
           <li><audio controls>
             <source src="sofia.mp3"/>
 		  <embed 
@@ -37,21 +37,20 @@
 		  <img src="Locko &.png" class="center"> 
 	  </div>
 	  <div class="main-content">
-       <h1>Environmental Impact of Computer Usage</h1>
-        <h4>Made by MING</h4>
+       <h1>Automated home system</h1>
+        <h4>Page made by MING</h4>
         
-        <p>In this website, we'll be talking about both the good and the bad of computer usage.</p>
+        <p>In this website, you will find 2 unique and awesome, life changing designs to help your house become better!</p>
         
-        <h2>What are the environmental consequences of computer device production?</h2>
+        <h2>What are the 2 designs?</h2>
         <p>
-            All computer problems relate to environmental pollution and health issues. Improper disposal can spread diseases, so proper disposal is important. Computer parts are valuable; recycling these parts can reduce environmental impact. Instead of throwing your computer out, recycle it to minimize landfill waste, hazardous materials, e-waste, and greenhouse gas emissions.
+            These 2 designs are to help your house stay safe and for you to have an easier life.
         </p>
 
         <ul>
-            <li><strong>Main computer impacts:</strong></li>
-            <li>Energy consumption</li>
-            <li>Electronic waste</li>
-            <li>Manufacturing process waste</li>
+            <li><strong>Micro:bit designs:</strong></li>
+            <li>Locko: automatic door locking system using light</li>
+            <li>Auto Blinds: auto blind opening/closing system using light</li>
         </ul>
 
         <p>
