--- a/page2.html
+++ b/page2.html
@@ -71,11 +71,11 @@ introducing: My automated door locking system. This system makes locking doors h
 		  <!--Carasel attempt-->
 		  <div class="carousel-section">
 			  <h2>360 View</h2>
-			  <div class="carousel" style="width: 600px; overflow: hidden; margin: 0 auto; position: relative;">
+			  <div class="carousel" style="width: 600px; overflow: hidden; margin: 0 auto; position: relative; height: 250px;">
 				  <div class="slides" style="display: flex; transition: transform 0.5s ease-in-out;">
-					  <img src="v.jpg" alt="v" style="max-height: 250px; width: auto;">
-					  <img src="vv.jpg" alt="vv" style="max-height: 250px; width: auto;">
-					  <img src="vvv.jpg" alt="vvv" style="max-height: 250px; width: auto;">
+					  <img src="v.jpg" alt="v" style="max-height: 250px; width: auto; object-fit: cover;">
+					  <img src="vv.jpg" alt="vv" style="max-height: 250px; width: auto; object-fit: cover;">
+					  <img src="vvv.jpg" alt="vvv" style="max-height: 250px; width: auto; object-fit: cover;">
 				  </div>
 			  </div>
 		  </div>
