--- a/index.html
+++ b/index.html
@@ -52,25 +52,19 @@
             <li>Locko: automatic door locking system using light</li>
             <li>Auto Blinds: auto blind opening/closing system using light</li>
         </ul>
+		  <h2>360 House View</h2>
+		  <div class="video-section">
+			  <video controls style="width: 100%; height: auto;" poster="Lock &.png">
+				  <source src="360view.mp4" type="video/mp4">
+			  </video>
+		  </div>
 
-        <p>
-            <strong>Heavy Metal Contamination:</strong> Computers contain heavy metals such as lead, mercury, and cadmium. When discarded in landfills, these metals can leach into the ground, contaminating soil and groundwater.
-        </p>
-
-        <h2>How does computer use harm the environment?</h2>
-        <p>Using a screen for 8 years results in greenhouse gas emissions equivalent to 70g CO<sub>2</sub>e from energy consumption.</p>
-
-        <p>Common setups and their carbon footprints include:</p>
-        <ul>
-            <li>Desktop + screen: 621kg CO<sub>2</sub>e</li>
-            <li>Laptop + screen: 691kg CO<sub>2</sub>e (+11%)</li>
-            <li>Desktop + 2 screens: 903kg CO<sub>2</sub>e (+45%)</li>
-            <li>Laptop + screen at office + screen at home: 928kg CO<sub>2</sub>e (+49%)</li>
-            <li>Desktop + screen + laptop: 1,030kg CO<sub>2</sub>e (+66%)</li>
-        </ul>
-
-        <p>The average desktop consumes 40W of electricity, which contributes to CO<sub>2</sub> emissions.</p>
-    </div>
-    <script src="script.js"></script> 
+		  <div class="button-section">
+			  <button onclick="window.location.href='page2.html'">Go to Locko Project</button>
+			  <button onclick="window.location.href='page3.html'">Go to Auto Blinds Project</button>
+		  </div>
+		  <p>You can also use the sidebar to navigate between the projects.</p>
+	  </div>
+	  <script src="script.js"></script> 
   </body> 
 </html>
