--- a/page2.html
+++ b/page2.html
@@ -73,9 +73,9 @@ introducing: My automated door locking system. This system makes locking doors h
 			  <h2>360 View</h2>
 			  <div class="carousel" style="width: 600px; overflow: hidden; margin: 0 auto; position: relative; height: 250px;">
 				  <div class="slides" style="display: flex; transition: transform 0.5s ease-in-out;">
-					  <img src="v.jpg" alt="v" style="max-height: 250px; width: auto; object-fit: cover;">
-					  <img src="vv.jpg" alt="vv" style="max-height: 250px; width: auto; object-fit: cover;">
-					  <img src="vvv.jpg" alt="vvv" style="max-height: 250px; width: auto; object-fit: cover;">
+					  <img src="v.jpg" alt="v" style="height: 100%; width: 100%; object-fit: cover;">
+					  <img src="vv.jpg" alt="vv" style="height: 100%; width: 100%; object-fit: cover;">
+					  <img src="vvv.jpg" alt="vvv" style="height: 100%; width: 100%; object-fit: cover;">
 				  </div>
 			  </div>
 		  </div>
