--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 				  <source src="360view.mp4" type="video/mp4">
 			  </video>
 		  </div>
-
-		  <div class="button-section">
-			  <button onclick="window.location.href='page2.html'">Go to Locko Project</button>
-			  <button onclick="window.location.href='page3.html'">Go to Auto Blinds Project</button>
+		  <div class="button-container">
+			  <a href="page2.html" class="project-button">Locko</a>
+			  <a href="page3.html" class="project-button">Auto Blinds</a>
 		  </div>
 		  <p>You can also use the sidebar to navigate between the projects.</p>
 	  </div>
