--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
 		  <h2>360 House View</h2>
 		  <div class="video-section">
-			  <video controls style="width: 100%; height: auto;" poster="Lock &.png">
+			  <video controls style="width: 100%; height: auto;" poster="Locko &.png">
 				  <source src="360view.mp4" type="video/mp4">
 			  </video>
 		  </div>
