--- a/page2.html
+++ b/page2.html
@@ -68,18 +68,17 @@ introducing: My automated door locking system. This system makes locking doors h
             <li>Improves safety by ensuring doors are locked at night.</li>
             <li>Hassle-free operation, eliminating the need for physical keys.</li>
         </ul>
-		  <!--Carasel attempt-->
-		  <div class="carousel-section">
+		  <!-- image gallary attempt-->
+		  <div class="image-gallery">
 			  <h2>360 View</h2>
-			  <div class="carousel" style="width: 600px; overflow: hidden; margin: 0 auto; position: relative; height: 250px;">
-				  <div class="slides" style="display: flex; transition: transform 0.5s ease-in-out;">
-					  <img src="v.jpg" alt="v" class="carousel-image">
-					  <img src="vv.jpg" alt="vv" class="carousel-image">
-					  <img src="vvv.jpg" alt="vvv" class="carousel-image">
-				  </div>
+			  <div class="gallery">
+				  <img src="v.jpg" alt="View 1" class="gallery-image">
+				  <img src="vv.jpg" alt="View 2" class="gallery-image">
+				  <img src="vvv.jpg" alt="View 3" class="gallery-image">
 			  </div>
 		  </div>
-		  <!--Carasel attempt-->
+
+		  <!--img gallary attempt-->
         <h2>Why Choose This System?</h2>
         <p>
             This automated door lock system provides a seamless solution to enhance home safety and convenience. By removing the need to remember to lock your door, it ensures a safer living environment while being incredibly user-friendly.
