--- a/page3.html
+++ b/page3.html
@@ -64,9 +64,9 @@ The system I designed utilizes the micro:bit's light sensor to detect daylight o
 		  <div class="image-gallery">
 			  <h2>360 View</h2>
 			  <div class="gallery">
-				  <img src="1.jpg" alt="View 1" class="gallery-image">
-				  <img src="2.jpg" alt="View 2" class="gallery-image">
-				  <img src="3.jpg" alt="View 3" class="gallery-image">
+				  <img src="qwe.jpg" alt="View 1" class="gallery-image">
+				  <img src="qwer.jpg" alt="View 2" class="gallery-image">
+				  <img src="qwert.jpg" alt="View 3" class="gallery-image">
 			  </div>
 		  </div>
 
